--- a/index.html
+++ b/index.html
@@ -1,103 +1,86 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Gagandeep Singh Pahuja — Portfolio</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <meta name="description" content="Gagandeep Singh Pahuja — MS Management of Technology at NYU. Content & Communications Strategist.">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gagan's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="index.html">Gagandeep Singh Pahuja</a>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="about.html">About / Resume</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
-
-  <main>
-    <section class="hero">
-      <div class="container hero-inner">
-        <div class="hero-text">
-          <h1>Gagandeep Singh Pahuja</h1>
-          <p class="tagline">MS in Management of Technology Student at NYU | Content & Communications Strategist</p>
-          <p class="contact-line">+44 7799 228 467 | <a href="mailto:gdspahuja@gmail.com">gdspahuja@gmail.com</a> | United Kingdom</p>
-          <p class="cta"><a class="btn" href="about.html">View Resume</a> <a class="btn ghost" href="contact.html">Contact</a></p>
-          <p class="links small"><a href="https://github.com/gagan-git-sardar" target="_blank">GitHub</a> · <a href="https://www.linkedin.com/in/gagandeep-singh-pahuja-3210ba158/" target="_blank">LinkedIn</a></p>
+    <header>
+        <nav>
+            <div class="logo">Gagan</div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </nav>
+        <div class="header-content">
+            <h1>I'm Gagan Deep Singh</h1>
+            <p>A <span class="typing"></span></p>
         </div>
-        <div class="hero-photo">
-          <img src="images/profile.png" alt="Gagandeep Singh Pahuja" />
+    </header>
+
+    <section id="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>I am a passionate web developer with experience in creating modern and responsive websites. I love to learn new technologies and improve my skills.</p>
         </div>
-      </div>
     </section>
 
-    <section class="summary container">
-      <h2>Professional Summary</h2>
-      <p>An aspiring content strategist with a strong background in technology and a passion for digital transformation. My experience at companies like TCS and Foxbiz has equipped me to translate complex technical concepts into clear, impactful content. As I pursue my Master's at NYU, I am focused on blending technical expertise with communication and leadership to create valuable content that solves real-world problems. I am a collaborative professional dedicated to building, learning, and growing.</p>
+    <section id="services">
+        <div class="container">
+            <h2>Services</h2>
+            <div class="service-boxes">
+                <div class="service-box">
+                    <h3>Web Design</h3>
+                    <p>I can design beautiful and user-friendly websites that will help you achieve your goals.</p>
+                </div>
+                <div class="service-box">
+                    <h3>Web Development</h3>
+                    <p>I can develop fast and reliable websites using the latest technologies.</p>
+                </div>
+                <div class="service-box">
+                    <h3>SEO</h3>
+                    <p>I can help you optimize your website for search engines to attract more visitors.</p>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section class="highlights container">
-      <div class="col">
-        <h3>Top Skills</h3>
-        <ul>
-          <li>Strategic Communications</li>
-          <li>Project Management</li>
-          <li>Leadership & Collaboration</li>
-          <li>Technical Writing</li>
-          <li>Product Strategy</li>
-        </ul>
-      </div>
-      <div class="col">
-        <h3>Education</h3>
-        <p><strong>New York University</strong> — Master of Science, Management of Technology (Expected August 2025)</p>
-        <p><strong>Chhattisgarh Swami Vivekanand Technical University</strong> — B.Tech, Computer Science (Aug 2018 – Jul 2022)</p>
-      </div>
+    <section id="portfolio">
+        <div class="container">
+            <h2>Portfolio</h2>
+            <div class="portfolio-items">
+                </div>
+        </div>
     </section>
 
-    <section class="experience container" id="experience">
-      <h2>Experience</h2>
-
-      <article class="job">
-        <h3>Assistant Product Manager — Foxbiz Software Pvt. Ltd.</h3>
-        <p class="meta">Bengaluru, India · January 2025 - August 2025</p>
-        <ul>
-          <li>Supported the development of a modular business management platform, collaborating with product and development teams to define feature requirements and streamline feature rollouts.</li>
-          <li>Engaged in user experience testing and feedback cycles to improve workflows and align product direction with business goals.</li>
-        </ul>
-      </article>
-
-      <article class="job">
-        <h3>DevOps Engineer — Tata Consultancy Services</h3>
-        <p class="meta">Pune, India · July 2022 - January 2025</p>
-        <ul>
-          <li>Automated cloud infrastructure and optimized CI/CD pipelines, leveraging Google Cloud Platform (GCP) and AWS.</li>
-          <li>Acted as a key communicator, spearheading cross-team collaboration to efficiently troubleshoot and resolve critical system issues.</li>
-        </ul>
-      </article>
-
-      <article class="job">
-        <h3>Intern — 4Mirrortech Innovatives Pvt. Ltd.</h3>
-        <p class="meta">Remote · August 2021 - March 2022</p>
-        <ul>
-          <li>Immersed in image processing, leveraging machine learning (ML) and artificial intelligence (AI) methodologies.</li>
-          <li>Contributed to the development and optimization of ML models, fostering a deep understanding of image recognition and feature extraction.</li>
-        </ul>
-      </article>
-
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" placeholder="Your Message" required></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </div>
     </section>
 
-  </main>
+    <footer>
+        <p>&copy; 2025 Gagan Deep Singh. All rights reserved.</p>
+    </footer>
 
-  <footer class="site-footer">
-    <div class="container">
-      <p>© Gagandeep Singh Pahuja · <a href="mailto:gdspahuja@gmail.com">gdspahuja@gmail.com</a></p>
-    </div>
-  </footer>
-
-  <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="script.js"></script>
 </body>
 </html>
