--- a/index.html
+++ b/index.html
@@ -3,84 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gagan's Portfolio</title>
+    <title>Gagandeep Singh Pahuja | Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">Gagan</div>
-            <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-            <div class="burger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-        </nav>
-        <div class="header-content">
-            <h1>I'm Gagan Deep Singh</h1>
-            <p>A <span class="typing"></span></p>
-        </div>
-    </header>
 
-    <section id="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>I am a passionate web developer with experience in creating modern and responsive websites. I love to learn new technologies and improve my skills.</p>
-        </div>
-    </section>
+    <div class="container">
+        <aside class="sidebar">
+            <div class="sidebar-content">
+                <h1>Gagandeep Singh Pahuja</h1>
+                <p class="tagline">MS in MOT Student at NYU | Content & Communications Strategist</p>
 
-    <section id="services">
-        <div class="container">
-            <h2>Services</h2>
-            <div class="service-boxes">
-                <div class="service-box">
-                    <h3>Web Design</h3>
-                    <p>I can design beautiful and user-friendly websites that will help you achieve your goals.</p>
+                <div class="contact-info">
+                    <p><i class="fas fa-phone icon"></i> +44 7799 228467</p>
+                    <p><i class="fas fa-envelope icon"></i> gdspahuja@gmail.com</p>
+                    <p><i class="fas fa-map-marker-alt icon"></i> United Kingdom</p>
                 </div>
-                <div class="service-box">
-                    <h3>Web Development</h3>
-                    <p>I can develop fast and reliable websites using the latest technologies.</p>
+
+                <div class="skills">
+                    <h2>Top Skills</h2>
+                    <ul>
+                        <li>Strategic Communications</li>
+                        <li>Project Management</li>
+                        <li>Leadership & Collaboration</li>
+                        <li>Technical Writing</li>
+                        <li>Product Strategy</li>
+                    </ul>
                 </div>
-                <div class="service-box">
-                    <h3>SEO</h3>
-                    <p>I can help you optimize your website for search engines to attract more visitors.</p>
+
+                <div class="links">
+                    <a href="https://www.linkedin.com/in/gagandeep-singh-pahuja-3210ba158" target="_blank" class="btn">
+                        <i class="fab fa-linkedin"></i> LinkedIn
+                    </a>
+                    <a href="https://github.com/gagan-git-sardar" target="_blank" class="btn">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
                 </div>
             </div>
-        </div>
-    </section>
+        </aside>
 
-    <section id="portfolio">
-        <div class="container">
-            <h2>Portfolio</h2>
-            <div class="portfolio-items">
+        <main class="main-content">
+            <section id="summary">
+                <h2>Professional Summary</h2>
+                <p>An aspiring content strategist with a strong background in technology and a passion for digital transformation. My experience at companies like TCS and Foxbiz has equipped me to translate complex technical concepts into clear, impactful content. As I pursue my Master's at NYU, I am focused on blending technical expertise with communication and leadership to create valuable content that solves real-world problems. I am a collaborative professional dedicated to building, learning, and growing.</p>
+            </section>
+
+            <section id="experience">
+                <h2>Experience</h2>
+                <div class="card">
+                    <h3>Assistant Product Manager</h3>
+                    <p class="company">Foxbiz Software Pvt. Ltd. | Bengaluru, India</p>
+                    <p class="date">January 2025 - August 2025</p>
+                    <ul>
+                        <li>Supported the development of a modular business management platform, collaborating with product and development teams to define feature requirements and streamline feature rollouts.</li>
+                        <li>Engaged in user experience testing and feedback cycles to improve workflows and align product direction with business goals.</li>
+                    </ul>
                 </div>
-        </div>
-    </section>
+                <div class="card">
+                    <h3>DevOps Engineer</h3>
+                    <p class="company">Tata Consultancy Services | Pune, India</p>
+                    <p class="date">July 2022 - January 2025</p>
+                    <ul>
+                        <li>Automated cloud infrastructure and optimized CI/CD pipelines, leveraging Google Cloud Platform (GCP) and AWS.</li>
+                        <li>Acted as a key communicator, spearheading cross-team collaboration to efficiently troubleshoot and resolve critical system issues.</li>
+                    </ul>
+                </div>
+            </section>
 
-    <section id="contact">
-        <div class="container">
-            <h2>Contact Me</h2>
-            <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" placeholder="Your Message" required></textarea>
-                <button type="submit">Send</button>
-            </form>
-        </div>
-    </section>
+            <section id="education">
+                <h2>Education</h2>
+                <div class="card">
+                    <h3>Master of Science, Management of Technology</h3>
+                    <p class="institution">New York University | London, UK & New York, NY</p>
+                    <p class="date">Expected August 2025</p>
+                </div>
+                 <div class="card">
+                    <h3>Bachelor of Technology, Computer Science</h3>
+                    <p class="institution">Chhattisgarh Swami Vivekanand Technical University</p>
+                    <p class="date">August 2018 – July 2022</p>
+                </div>
+            </section>
+            
+            <section id="contact">
+                <h2>Contact Me</h2>
+                <form action="https://formspree.io/f/xnnggebg" method="POST">
+                    <div class="form-group">
+                        <label for="name">Your Name</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Your Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit" class="btn-submit">Send Message</button>
+                </form>
+            </section>
+        </main>
+    </div>
 
-    <footer>
-        <p>&copy; 2025 Gagan Deep Singh. All rights reserved.</p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="script.js"></script>
 </body>
 </html>
