--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
         <p>&copy; 2025 Gagandeep Singh Pahuja. Designed with passion.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
