--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h2 class="section-title reveal">About Me</h2>
             <div class="about-container reveal">
                 <div class="about-image">
-                    <img src="images/" alt="Gagandeep Singh Pahuja">
+                    <img src="images/profile.png" alt="Gagandeep Singh Pahuja">
                 </div>
                 <div class="about-content">
                     <h3>Blending Technology with Storytelling</h3>
