--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gagandeep Singh Pahuja | Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -52,3 +52,84 @@
                     <p>Whether it's managing a product roadmap or visualizing data, I thrive on turning ideas into tangible results that solve real-world problems.</p>
                 </div>
             </div>
+        </section>
+
+        <section id="experience" class="container">
+            <h2 class="section-title reveal">Experience</h2>
+            <div class="card-grid">
+                <div class="card reveal">
+                    <h3><i class="fas fa-briefcase card-icon"></i>Assistant Product Manager</h3>
+                    <p class="company">Foxbiz Software Pvt. Ltd.</p>
+                    <p class="date">Jan 2025 - Aug 2025</p>
+                </div>
+                <div class="card reveal">
+                    <h3><i class="fas fa-briefcase card-icon"></i>Content Strategist</h3>
+                    <p class="company">NYU Projects</p>
+                    <p class="date">Ongoing</p>
+                </div>
+                <div class="card reveal">
+                    <h3><i class="fas fa-briefcase card-icon"></i>Former System Engineer</h3>
+                    <p class="company">Tata Consultancy Services</p>
+                    <p class="date">Jul 2022 - Jan 2025</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="projects" class="container">
+            <h2 class="section-title reveal">My Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card reveal">
+                    <img src="https://via.placeholder.com/400x300" alt="Project Thumbnail">
+                    <div class="project-info">
+                        <h3>Mahamaya Food Delivery App</h3>
+                        <p>A concept app for food delivery in Ratanpur, focusing on local vendors.</p>
+                        <div class="project-links">
+                            <a href="#" class="btn-project">View Live</a>
+                            <a href="#" class="btn-project">View Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card reveal">
+                    <img src="https://via.placeholder.com/400x300" alt="Project Thumbnail">
+                    <div class="project-info">
+                        <h3>London Crime Data Visualization</h3>
+                        <p>An interactive dashboard visualizing crime statistics across London boroughs.</p>
+                        <div class="project-links">
+                            <a href="#" class="btn-project">View Live</a>
+                            <a href="#" class="btn-project">View Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card reveal">
+                    <img src="https://via.placeholder.com/400x300" alt="Project Thumbnail">
+                    <div class="project-info">
+                        <h3>Digital NYU MOT Planner</h3>
+                        <p>A task management tool tailored for Management of Technology students at NYU.</p>
+                        <div class="project-links">
+                            <a href="#" class="btn-project">View Live</a>
+                            <a href="#" class="btn-project">View Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <section id="contact" class="container">
+            <h2 class="section-title reveal">Get In Touch</h2>
+            <form action="https://formspree.io/f/xnnggebg" method="POST" class="reveal">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                <button type="submit" class="btn">Send Message</button>
+            </form>
+        </section>
+    </main>
+    
+    <footer>
+        <p>&copy; 2025 Gagandeep Singh Pahuja. Designed with passion.</p>
+    </footer>
+
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script src="main.js"></script>
+</body>
+</html>
