--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section id="about" class="container">
             <div class="about-grid">
                 <div class="about-intro reveal">
-                    <img src="images/Profile.jpeg" alt="Gagandeep Singh Pahuja" class="profile-pic">
+                    <img src="images/profile.png" alt="Gagandeep Singh Pahuja" class="profile-pic">
                     <h2>Gagandeep Singh Pahuja</h2>
                     <p class="subtitle">MS in MOT Student at NYU</p>
                     <a href="https://www.linkedin.com/in/gagandeep-singh-pahuja-3210ba158" target="_blank" class="btn-linkedin">
