--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale="1.0">
     <title>Gagandeep Singh Pahuja | Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +13,11 @@
 <body>
 
     <header class="hero">
+        <video playsinline autoplay muted loop class="hero-video">
+            <source src="hero-background.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+
         <div class="hero-content">
             <h1 class="reveal">Gagandeep Singh Pahuja</h1>
             <p class="tagline reveal">I'm a <span id="typing-animation"></span></p>
@@ -25,7 +30,6 @@
 
     <nav>
         <div class="nav-container">
-            <a href="#" class="nav-logo">GSP</a>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
@@ -39,7 +43,7 @@
         <section id="about" class="container">
             <div class="about-grid">
                 <div class="about-intro reveal">
-                    <img src="images/profile.png" alt="Gagandeep Singh Pahuja" class="profile-pic">
+                    <img src="images/Profile.jpeg" alt="Gagandeep Singh Pahuja" class="profile-pic">
                     <h2>Gagandeep Singh Pahuja</h2>
                     <p class="subtitle">MS in MOT Student at NYU</p>
                     <a href="https://www.linkedin.com/in/gagandeep-singh-pahuja-3210ba158" target="_blank" class="btn-linkedin">
@@ -63,51 +67,51 @@
                     <p class="date">Jan 2025 - Aug 2025</p>
                 </div>
                 <div class="card reveal">
-                    <h3><i class="fas fa-briefcase card-icon"></i>Content Strategist</h3>
-                    <p class="company">NYU Projects</p>
-                    <p class="date">Ongoing</p>
-                </div>
-                <div class="card reveal">
-                    <h3><i class="fas fa-briefcase card-icon"></i>Former System Engineer</h3>
+                    <h3><i class="fas fa-briefcase card-icon"></i>DevOps Engineer</h3>
                     <p class="company">Tata Consultancy Services</p>
                     <p class="date">Jul 2022 - Jan 2025</p>
+                </div>
+                <div class="card reveal">
+                    <h3><i class="fas fa-microchip card-icon"></i>AI/ML Intern</h3>
+                    <p class="company">4Mirrortech Innovatives</p>
+                    <p class="date">Aug 2021 - Mar 2022</p>
                 </div>
             </div>
         </section>
 
         <section id="projects" class="container">
-            <h2 class="section-title reveal">My Projects</h2>
+            <h2 class="section-title reveal">Key Projects & Contributions</h2>
             <div class="projects-grid">
                 <div class="project-card reveal">
-                    <img src="https://via.placeholder.com/400x300" alt="Project Thumbnail">
                     <div class="project-info">
-                        <h3>Mahamaya Food Delivery App</h3>
-                        <p>A concept app for food delivery in Ratanpur, focusing on local vendors.</p>
-                        <div class="project-links">
-                            <a href="#" class="btn-project">View Live</a>
-                            <a href="#" class="btn-project">View Code</a>
+                        <h3>Modular Business Platform</h3>
+                        <p>Led the implementation of user-facing modules for a scalable business management platform at Foxbiz, focusing on features like online store setup, invoicing, and data backup to empower small enterprises.</p>
+                        <div class="tech-stack">
+                            <span>Project Management</span>
+                            <span>Strategic Communications</span>
                         </div>
                     </div>
                 </div>
                 <div class="project-card reveal">
-                    <img src="https://via.placeholder.com/400x300" alt="Project Thumbnail">
                     <div class="project-info">
-                        <h3>London Crime Data Visualization</h3>
-                        <p>An interactive dashboard visualizing crime statistics across London boroughs.</p>
-                        <div class="project-links">
-                            <a href="#" class="btn-project">View Live</a>
-                            <a href="#" class="btn-project">View Code</a>
+                        <h3>Cloud Infrastructure Automation</h3>
+                        <p>Engineered and managed cloud infrastructure at TCS using AWS and GCP. Focused on automating processes and troubleshooting critical systems to drive business solutions and enhance reliability.</p>
+                        <div class="tech-stack">
+                            <span>AWS</span>
+                            <span>GCP</span>
+                            <span>Jenkins</span>
+                            <span>Python</span>
                         </div>
                     </div>
                 </div>
                 <div class="project-card reveal">
-                    <img src="https://via.placeholder.com/400x300" alt="Project Thumbnail">
                     <div class="project-info">
-                        <h3>Digital NYU MOT Planner</h3>
-                        <p>A task management tool tailored for Management of Technology students at NYU.</p>
-                        <div class="project-links">
-                            <a href="#" class="btn-project">View Live</a>
-                            <a href="#" class="btn-project">View Code</a>
+                        <h3>AI-Powered Image Processing</h3>
+                        <p>Developed and optimized machine learning models for image recognition and feature extraction at 4Mirrortech. Gained hands-on experience with data preprocessing, model training, and deployment.</p>
+                        <div class="tech-stack">
+                            <span>TensorFlow</span>
+                            <span>OpenCV</span>
+                            <span>System Performance</span>
                         </div>
                     </div>
                 </div>
