--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale="1.0">
-    <title>Gagandeep Singh Pahuja | Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gagandeep Singh Pahuja | Project Manager</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,11 +17,10 @@
             <source src="hero-background.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-
         <div class="hero-content">
             <h1 class="reveal">Gagandeep Singh Pahuja</h1>
-            <p class="tagline reveal">I'm a <span id="typing-animation"></span></p>
-            <a href="#about" class="btn reveal">Discover My Work</a>
+            <p class="tagline reveal">I am an aspiring <span id="typing-animation"></span></p>
+            <a href="#about" class="btn reveal">Learn More About Me</a>
         </div>
         <a href="#about" class="scroll-down-link">
             <div class="scroll-down"></div>
@@ -45,21 +44,23 @@
                 <div class="about-intro reveal">
                     <img src="images/profile.png" alt="Gagandeep Singh Pahuja" class="profile-pic">
                     <h2>Gagandeep Singh Pahuja</h2>
-                    <p class="subtitle">MS in MOT Student at NYU</p>
-                    <a href="https://www.linkedin.com/in/gagandeep-singh-pahuja-3210ba158" target="_blank" class="btn-linkedin">
-                        <i class="fab fa-linkedin"></i> Connect on LinkedIn
-                    </a>
+                    <p class="subtitle">Aspiring Project Manager | MS in MOT Student</p>
+                    <div class="social-links">
+                        <a href="https://www.linkedin.com/in/gagandeep-singh-pahuja-3210ba158" target="_blank" class="social-icon linkedin"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/gagan._sardar_ji/" target="_blank" class="social-icon instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="mailto:gdspahuja@gmail.com" class="social-icon gmail"><i class="fas fa-envelope"></i></a>
+                    </div>
                 </div>
                 <div class="about-summary reveal">
-                    <h3 class="section-title">About Me</h3>
-                    <p>I’m a Management of Technology student at NYU with a deep passion for systems thinking, storytelling, and innovation. My journey blends engineering precision with creative communication, allowing me to bridge the gap between complex technical concepts and clear, impactful content.</p>
-                    <p>Whether it's managing a product roadmap or visualizing data, I thrive on turning ideas into tangible results that solve real-world problems.</p>
+                    <h3 class="section-title">Bridging Strategy & Execution</h3>
+                    <p>As a Management of Technology student at NYU, I am passionate about leading complex projects from concept to completion. My background in engineering and product development has given me a unique ability to bridge the gap between technical teams and business stakeholders, ensuring clarity, alignment, and on-time delivery.</p>
+                    <p>I am driven to build systems, streamline processes, and lead teams to turn ambitious ideas into impactful, real-world solutions.</p>
                 </div>
             </div>
         </section>
 
         <section id="experience" class="container">
-            <h2 class="section-title reveal">Experience</h2>
+            <h2 class="section-title reveal">Professional Experience</h2>
             <div class="card-grid">
                 <div class="card reveal">
                     <h3><i class="fas fa-briefcase card-icon"></i>Assistant Product Manager</h3>
@@ -80,38 +81,37 @@
         </section>
 
         <section id="projects" class="container">
-            <h2 class="section-title reveal">Key Projects & Contributions</h2>
+            <h2 class="section-title reveal">Project Highlights</h2>
             <div class="projects-grid">
                 <div class="project-card reveal">
                     <div class="project-info">
                         <h3>Modular Business Platform</h3>
-                        <p>Led the implementation of user-facing modules for a scalable business management platform at Foxbiz, focusing on features like online store setup, invoicing, and data backup to empower small enterprises.</p>
+                        <p>Managed feature requirements and coordinated the implementation of user-facing modules for a scalable business platform at Foxbiz, ensuring alignment between product vision and development timelines to empower small enterprises.</p>
                         <div class="tech-stack">
                             <span>Project Management</span>
-                            <span>Strategic Communications</span>
+                            <span>Stakeholder Communication</span>
                         </div>
                     </div>
                 </div>
                 <div class="project-card reveal">
                     <div class="project-info">
                         <h3>Cloud Infrastructure Automation</h3>
-                        <p>Engineered and managed cloud infrastructure at TCS using AWS and GCP. Focused on automating processes and troubleshooting critical systems to drive business solutions and enhance reliability.</p>
+                        <p>As a DevOps Engineer at TCS, I led initiatives to automate and manage cloud infrastructure using AWS and GCP, improving system reliability and spearheading cross-team collaboration to resolve critical issues efficiently.</p>
                         <div class="tech-stack">
-                            <span>AWS</span>
-                            <span>GCP</span>
-                            <span>Jenkins</span>
-                            <span>Python</span>
+                            <span>AWS & GCP</span>
+                            <span>CI/CD Pipelines</span>
+                            <span>Problem-Solving</span>
                         </div>
                     </div>
                 </div>
                 <div class="project-card reveal">
                     <div class="project-info">
                         <h3>AI-Powered Image Processing</h3>
-                        <p>Developed and optimized machine learning models for image recognition and feature extraction at 4Mirrortech. Gained hands-on experience with data preprocessing, model training, and deployment.</p>
+                        <p>Developed and optimized machine learning models for image recognition at 4Mirrortech. This project involved the full lifecycle from data preprocessing and model training to deployment and performance refinement.</p>
                         <div class="tech-stack">
                             <span>TensorFlow</span>
                             <span>OpenCV</span>
-                            <span>System Performance</span>
+                            <span>Agile Methodologies</span>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
         </section>
         
         <section id="contact" class="container">
-            <h2 class="section-title reveal">Get In Touch</h2>
+            <h2 class="section-title reveal">Let's Collaborate</h2>
             <form action="https://formspree.io/f/xnnggebg" method="POST" class="reveal">
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
