--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
 <body>
 
     <header class="hero">
-        <video playsinline autoplay muted loop class="hero-video">
-            <source src="hero-background.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
         <div class="hero-content">
             <h1 class="reveal">Gagandeep Singh Pahuja</h1>
             <p class="tagline reveal">I am an aspiring <span id="typing-animation"></span></p>
@@ -66,16 +62,19 @@
                     <h3><i class="fas fa-briefcase card-icon"></i>Assistant Product Manager</h3>
                     <p class="company">Foxbiz Software Pvt. Ltd.</p>
                     <p class="date">Jan 2025 - Aug 2025</p>
+                    <p class="description">Managed feature requirements and coordinated the implementation of user-facing modules for a scalable business platform, ensuring alignment between product vision and development timelines.</p>
                 </div>
                 <div class="card reveal">
                     <h3><i class="fas fa-briefcase card-icon"></i>DevOps Engineer</h3>
                     <p class="company">Tata Consultancy Services</p>
                     <p class="date">Jul 2022 - Jan 2025</p>
+                    <p class="description">Engineered and managed cloud infrastructure using AWS & GCP. Focused on automating processes, optimizing CI/CD pipelines, and troubleshooting critical systems to drive business solutions.</p>
                 </div>
                 <div class="card reveal">
                     <h3><i class="fas fa-microchip card-icon"></i>AI/ML Intern</h3>
                     <p class="company">4Mirrortech Innovatives</p>
                     <p class="date">Aug 2021 - Mar 2022</p>
+                    <p class="description">Developed and optimized machine learning models for image recognition. Gained hands-on experience with the full lifecycle from data preprocessing and model training to final deployment.</p>
                 </div>
             </div>
         </section>
@@ -86,7 +85,7 @@
                 <div class="project-card reveal">
                     <div class="project-info">
                         <h3>Modular Business Platform</h3>
-                        <p>Managed feature requirements and coordinated the implementation of user-facing modules for a scalable business platform at Foxbiz, ensuring alignment between product vision and development timelines to empower small enterprises.</p>
+                        <p>Led the implementation of user-facing modules for a scalable business platform at Foxbiz, focusing on features like online store setup, invoicing, and data backup to empower small enterprises.</p>
                         <div class="tech-stack">
                             <span>Project Management</span>
                             <span>Stakeholder Communication</span>
@@ -107,7 +106,7 @@
                 <div class="project-card reveal">
                     <div class="project-info">
                         <h3>AI-Powered Image Processing</h3>
-                        <p>Developed and optimized machine learning models for image recognition at 4Mirrortech. This project involved the full lifecycle from data preprocessing and model training to deployment and performance refinement.</p>
+                        <p>Developed and optimized machine learning models for image recognition at 4Mirrortech. This project involved the full lifecycle from data preprocessing, model training, and deployment to performance refinement.</p>
                         <div class="tech-stack">
                             <span>TensorFlow</span>
                             <span>OpenCV</span>
