--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <body>
 
     <header class="hero">
+        <video playsinline autoplay muted loop class="hero-video">
+            <source src="hero-background.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
         <div class="hero-content">
             <h1 class="reveal">Gagandeep Singh Pahuja</h1>
             <p class="tagline reveal">I am an aspiring <span id="typing-animation"></span></p>
@@ -85,7 +89,7 @@
                 <div class="project-card reveal">
                     <div class="project-info">
                         <h3>Modular Business Platform</h3>
-                        <p>Led the implementation of user-facing modules for a scalable business platform at Foxbiz, focusing on features like online store setup, invoicing, and data backup to empower small enterprises.</p>
+                        <p>Managed feature requirements and coordinated the implementation of user-facing modules for a scalable business platform at Foxbiz, ensuring alignment between product vision and development timelines to empower small enterprises.</p>
                         <div class="tech-stack">
                             <span>Project Management</span>
                             <span>Stakeholder Communication</span>
