--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
 
     <nav>
         <div class="nav-container">
-            <ul>
+            <a href="#" class="nav-logo">GSP</a>
+            <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
         </div>
     </nav>
 
@@ -66,19 +72,16 @@
                     <h3><i class="fas fa-briefcase card-icon"></i>Assistant Product Manager</h3>
                     <p class="company">Foxbiz Software Pvt. Ltd.</p>
                     <p class="date">Jan 2025 - Aug 2025</p>
-                    <p class="description">Managed feature requirements and coordinated the implementation of user-facing modules for a scalable business platform, ensuring alignment between product vision and development timelines.</p>
                 </div>
                 <div class="card reveal">
                     <h3><i class="fas fa-briefcase card-icon"></i>DevOps Engineer</h3>
                     <p class="company">Tata Consultancy Services</p>
                     <p class="date">Jul 2022 - Jan 2025</p>
-                    <p class="description">Engineered and managed cloud infrastructure using AWS & GCP. Focused on automating processes, optimizing CI/CD pipelines, and troubleshooting critical systems to drive business solutions.</p>
                 </div>
                 <div class="card reveal">
                     <h3><i class="fas fa-microchip card-icon"></i>AI/ML Intern</h3>
                     <p class="company">4Mirrortech Innovatives</p>
                     <p class="date">Aug 2021 - Mar 2022</p>
-                    <p class="description">Developed and optimized machine learning models for image recognition. Gained hands-on experience with the full lifecycle from data preprocessing and model training to final deployment.</p>
                 </div>
             </div>
         </section>
