--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gagandeep Singh Pahuja | Project Manager</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -29,7 +29,6 @@
 
     <nav>
         <div class="nav-container">
-            
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
@@ -46,9 +45,10 @@
 
     <main>
         <section id="about" class="container">
-            <div class="about-grid">
-                <div class="about-intro reveal">
-                    <img src="images/profile.png" alt="Gagandeep Singh Pahuja" class="profile-pic">
+            <h2 class="section-title reveal">About Me</h2>
+            <div class="about-grid reveal">
+                <div class="about-intro">
+                    <img src="images/Profile.jpeg" alt="Gagandeep Singh Pahuja" class="profile-pic">
                     <h2>Gagandeep Singh Pahuja</h2>
                     <p class="subtitle">Aspiring Project Manager | MS in MOT Student</p>
                     <div class="social-links">
@@ -57,10 +57,9 @@
                         <a href="mailto:gdspahuja@gmail.com" class="social-icon gmail"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
-                <div class="about-summary reveal">
-                    <h3 class="section-title">Bridging Strategy & Execution</h3>
+                <div class="about-summary">
+                    <h3>Bridging Strategy & Execution</h3>
                     <p>As a Management of Technology student at NYU, I am passionate about leading complex projects from concept to completion. My background in engineering and product development has given me a unique ability to bridge the gap between technical teams and business stakeholders, ensuring clarity, alignment, and on-time delivery.</p>
-                    <p>I am driven to build systems, streamline processes, and lead teams to turn ambitious ideas into impactful, real-world solutions.</p>
                 </div>
             </div>
         </section>
@@ -140,6 +139,6 @@
     </footer>
 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
