--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gagandeep Singh Pahuja | Project Manager</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -48,7 +48,7 @@
             <h2 class="section-title reveal">About Me</h2>
             <div class="about-grid reveal">
                 <div class="about-intro">
-                    <img src="images/Profile.jpeg" alt="Gagandeep Singh Pahuja" class="profile-pic">
+                    <img src="images/profile.png" alt="Gagandeep Singh Pahuja" class="profile-pic">
                     <h2>Gagandeep Singh Pahuja</h2>
                     <p class="subtitle">Aspiring Project Manager | MS in MOT Student</p>
                     <div class="social-links">
@@ -139,6 +139,6 @@
     </footer>
 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
