--- a/index.html
+++ b/index.html
@@ -124,9 +124,21 @@
                     </select>
                 </div>
 
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                <div class="form-group">
+                    <label for="name">Your Name</label>
+                    <input id="name" type="text" name="name" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Your Email</label>
+                    <input id="email" type="email" name="email" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="message">Your Message</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+                
                 <button type="submit" class="btn">Send Message</button>
             </form>
         </section>
