--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         
         <section id="contact" class="contact-section">
             <video playsinline autoplay muted loop class="contact-video-bg">
-                <source src="Collaborative_Digital_Whiteboard_Session.mp4" type="video/mp4">
+                <source src="contact-background.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="container contact-container">
